--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,17 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
-  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-  {%- feed_meta -%}
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
-  {%- endif -%}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {%- seo -%}
+    {%- for item in site.data.stylesheets.styles -%}
+        {%- if 'ui' == item.group -%}
+            {%- for css in item.sheets -%}
+                <link rel="stylesheet" id="{{ css.name | slugify }}" href="{{ css.url | relative_url }}?v{{ site.version }}" type="{{ css.type }}" media="{{ css.media }}">
+            {%- endfor -%}
+        {%- endif -%}
+    {%- endfor -%}
+    {%- feed_meta -%}
+    {%- if jekyll.environment == 'production' and site.google_analytics -%}
+        {%- include google-analytics.html -%}
+    {%- endif -%}
 </head>
