--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {%- include head.html -%}
+    {%- include head.html -%}
 
-  <body>
+    <body>
 
-    {%- include header.html -%}
+        {%- include header.html -%}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+        <main class="page-content" aria-label="Content">
 
-    {%- include footer.html -%}
+            {%- include nav-section.html -%}
 
-    {%- include foot.html -%}
+            <div class="wrapper">
 
-  </body>
+                {{ content }}
 
+            </div>
+        </main>
+
+        {%- include footer.html -%}
+
+        {%- include foot.html -%}
+
+    </body>
 </html>
