--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,32 @@
 <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
-  <div class="wrapper">
+    <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
     <h2 class="footer-heading">{{ site.title | escape }}</h2>
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
+    <section class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
+            <li class="p-name">
+                {%- if site.author -%}
+                    {{ site.author | escape }}
+                {%- else -%}
+                    {{ site.title | escape }}
+                {%- endif -%}
             </li>
             {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+                <li>
+                    <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
+                </li>
             {%- endif -%}
         </ul>
-      </div>
+    </section>
 
-      <div class="footer-col footer-col-2">
+    <section class="footer-col footer-col-2">
         {%- include social.html -%}
-      </div>
+    </section>
 
-      <div class="footer-col footer-col-3">
+    <section class="footer-col footer-col-3">
         <p>{{- site.description | escape -}}</p>
-      </div>
-    </div>
-
-  </div>
+    </section>
 
 </footer>
