--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,15 @@
 
     {%- if page_paths -%}
         <nav class="site-nav">
+            <ul>
+                {%- for path in page_paths -%}
+                    {%- assign my_page = site.pages | where: "path", path | first -%}
+                    {%- if my_page.title -%}
+                        <li><a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
+                    {%- endif -%}
+                {% endfor -%}
+            </ul>
+            <!-- @todo I don't like this hack. Return to using JS for functionality. -->
             <input type="checkbox" id="nav-trigger" class="nav-trigger" />
             <label for="nav-trigger">
                 <span class="menu-icon">
@@ -16,15 +25,6 @@
                     </svg>
                 </span>
             </label>
-
-            <div class="trigger">
-                {%- for path in page_paths -%}
-                    {%- assign my_page = site.pages | where: "path", path | first -%}
-                    {%- if my_page.title -%}
-                        <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-                    {%- endif -%}
-                {% endfor -%}
-            </div>
         </nav>
     {%- endif -%}
 
