--- a/_sass/partials/_layout.scss
+++ b/_sass/partials/_layout.scss
@@ -10,11 +10,14 @@ body {
           / minmax(175px, 3fr) 9fr 3fr; /* columns */
 }
 
-header {
+.site-header {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
     grid-area: header;
 }
 
-nav {
+.section-nav {
     grid-area: nav;
 }
 
@@ -65,28 +68,50 @@ article {
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
-    min-height: $spacing-unit * 1.865;
-    position: relative; /* Positioning mobile navigation icon */
 }
 
 .site-title {
     @include relative-font-size(1.625);
-    font-weight: 300;
-    line-height: $base-line-height * $base-font-size * 2.25;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
+    font-weight: 400;
+    margin: 0 1rem;
 
-    &,
-    &:visited {
+    &:hover,
+    &:focus {
         color: $grey-color-dark;
     }
 
 }
 
+nav {
+
+    ul {
+        list-style-type: none;
+    }
+
+}
+
 .site-nav {
-    float: right;
-    line-height: $base-line-height * $base-font-size * 2.25;
+
+    ul {
+        display: flex;
+
+        li {
+            flex: 1 1 auto;
+            margin-right: 1rem;
+
+            a {
+                background: #f1f1f1;
+                border-radius: 5px;
+                padding: 1em 2em;
+
+                &:hover,
+                &:focus {
+                    background: $brand-color;
+                    color: #fff;
+                }
+            }
+        }
+    }
 
     .nav-trigger {
         display: none;
@@ -94,16 +119,6 @@ article {
 
     .menu-icon {
         display: none;
-    }
-
-    .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
-
-        /* Gaps between nav items, but not on the last one */
-        &:not(:last-child) {
-            margin-right: 20px;
-        }
     }
 
     @include media-query($on-palm) {
@@ -168,43 +183,17 @@ article {
  */
 .site-footer {
     border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
+    padding: 1.5rem 0;
 }
 
 .footer-heading {
     @include relative-font-size(1.125);
-    margin-bottom: $spacing-unit / 2;
 }
 
 .contact-list,
 .social-media-list {
     list-style: none;
     margin-left: 0;
-}
-
-@include media-query($on-laptop) {
-
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
-    }
-
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-
-}
-
-@include media-query($on-palm) {
-
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-
 }
 
 /**
