Add expand-collapse SVG icon

--- a/_includes/nav-section.html
+++ b/_includes/nav-section.html
@@ -5,7 +5,10 @@
             {%- if '' != group.name -%}
                 <li class="nav-item nav-section-title {% if group.name == page.category %}current{% endif %}">
                     {%- assign items = group.items | sort: 'order' -%}
-                    <a href="{{ items.first.url | relative_url }}">{{ group.name }}</a>
+                    <a href="{{ items.first.url | relative_url }}">
+                        <svg aria-hidden="true" class="expandable" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg>
+                        {{ group.name }}
+                    </a>
                     <ul>
                         {%- for item in items -%}
                             <li class="nav-item {% if item.url == page.url %}current{% endif %}"><a href="{{ item.url | relative_url }}">{{ item.title }}</a></li>
