Add open sans and UI tile layout

--- a/_includes/pattern-styles.html
+++ b/_includes/pattern-styles.html
@@ -3,10 +3,25 @@
         border: 1px solid lightblue;
         contain: content;
         display: block;
-        font: 14px/22px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+        font: 14px/22px "Open Sans", "Lucida Grande", "Lucida Sans", Geneva, Verdana, sans-serif;
     }
     .pattern-inner {
         margin: 1rem;
+    }
+    .ui--tiles {
+        align-items: flex-start;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: flex-start;
+    }
+    .ui--tiles > * {
+        margin: 2rem 1rem;
+    }
+    .ui--pattern-box {
+        border-radius: 3px;
+        display: block;
+        height: 8rem;
+        width: 12.5rem;
     }
 </style>
 
