Rename section-nav.html > pattern-nav.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
         {%- for item in site.patterns -%}
             {%- if item.id == page.id -%}
-                {%- include nav-section.html -%}
+                {%- include pattern-nav.html -%}
             {%- endif -%}
         {%- endfor -%}
 
