--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -68,7 +68,7 @@ main {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-  font-weight: $base-font-weight;
+  font-weight: 700;
 }
 
 /**
@@ -109,6 +109,7 @@ code {
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #eef;
+    font-family: $mono-font-family;
 }
 
 code {
