Add dockable pattern nav menu styles, update colors

--- a/_sass/partials/_layout.scss
+++ b/_sass/partials/_layout.scss
@@ -3,98 +3,34 @@
  */
 body {
     min-height: 100vh;
-    display: grid;
-    grid: "header header header" 6em
-          "nav main main" auto
-          "footer footer footer" minmax(6em, 10em) /* row */
-          / minmax(16rem, 3fr) 9fr 3fr; /* columns */
+}
+
+.header-decor {
+    background: $dt-gray-dark;
+    box-shadow: 0px 1px 6px 1px rgba(20, 20, 20,.4)
 }
 
 .site-header {
-    align-items: center;
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
     display: flex;
     justify-content: space-between;
-    grid-area: header;
-}
-
-.section-nav {
-    grid-area: nav;
-    position: relative;
-
-    > ul {
-        margin: 1.5rem;
-    }
-
-    .nav-section-title {
-        background: lighten($grey-color-light, 5%);
-        border-bottom: 1px solid darken($grey-color-light, 10%);
-
-        > a {
-            background: $grey-color-light;
-        }
-
-        ul a {
-            padding-left: 2rem;
-        }
-    }
-
-    a {
-        display: block;
-        padding: .75em;
-        text-decoration: none;
-
-        &:hover,
-        &:focus {
-            background: $brand-color;
-            color: #fff;
-
-            & .expandable {
-                fill: #fff;
-            }
-        }
-
-        & .expandable {
-            fill: $brand-color;
-            height: 24px;
-            position: absolute;
-            right: 2.4rem;
-            width: 24px;
-        }
-    }
-
-    .current {
-        > a {
-            color: $text-color;
-        }
-
-        & .expandable {
-            fill: #fff;
-            transform: rotate(-90deg);
-        }
-    }
-
-    .nav-section-title.current > a {
-        color: #fff;
-        background: $brand-color;
-    }
-
-    .nav-item:not(.current) > ul {
-        display: none;
-    }
+    max-width: 72.5rem;
+    margin: 0 auto;
+    min-height: 10rem;
+    padding: 1.5rem 0;
 }
 
 main {
-    grid-area: main;
+    max-width: 72.5rem;
+    margin: 3rem auto;
 }
 
-footer {
+.site-footer {
     align-items: flex-start;
     display: flex;
     flex-flow: row wrap;
-    grid-area: footer;
     justify-content: space-evenly;
+    max-width: 72.5rem;
+    margin: 0 auto;
 
     section {
         min-width: 300px;
@@ -108,6 +44,7 @@ article {
           "section-one section-two" auto /* row */
           "section-three section-three" auto /* row */
           / minmax(100px, 1.3fr) minmax(100px, 1fr); /* columns */
+    grid-gap: 1.5rem 2rem;
 
     header {
         grid-area: article-header;
@@ -127,16 +64,150 @@ article {
 }
 
 /**
- * Site header
+ * Navigation
  */
-.site-title {
-    @include relative-font-size(1.625);
-    font-weight: 400;
-    margin: 0 1rem;
+.section-nav-toggle {
+    background: #fff;
+    border-radius: 0 5px 5px 0;
+    box-shadow: 2px 3px 5px 1px rgba(20, 20, 20, .2);
+    height: 3.5rem;
+    position: fixed;
+    top: 1.5rem;
+    transform: translateX(0);
+    transition-delay: .1s;
+    transition-duration: .3s;
+    transition-property: transform, left;
+    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+    width: 2rem;
+    z-index: 4;
 
     &:hover,
     &:focus {
-        color: $grey-color-dark;
+        background: #efefef;
+        box-shadow: 2px 3px 7px 3px rgba(20, 20, 20, .2);
+    }
+
+    svg {
+        fill: $grey-color-dark;
+        vertical-align: bottom;
+    }
+
+    &.nav-visible {
+        transform: translateX(17.5rem);
+
+        svg {
+            transform: translateX(-5px) rotate(0.5turn);
+        }
+    }
+}
+
+.section-nav {
+    background: #f8f8f2;
+    border-right: 1px solid $grey-color-light;
+    bottom: 0;
+    box-shadow: 2px 3px 5px 1px rgba(20, 20, 20, .2);
+    left: -18rem;
+    position: fixed;
+    top: 0;
+    transform: translateX(0);
+    transition-delay: .1s;
+    transition-duration: .3s;
+    transition-property: transform, left;
+    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+    width: 17.5rem;
+    z-index: 4;
+
+    &.visible {
+        transform: translateX(18rem);
+    }
+
+    .heading {
+        background: $dt-gray-dark;
+        color: $dt-purple;
+        font-size: 1.6rem;
+        margin: 0;
+        padding: 1.5rem 2rem;
+        text-align: right;
+    }
+
+    > ul {
+        border-top: 1px solid darken($grey-color-light, 10%);
+        margin: 0;
+    }
+
+    .nav-section-title {
+        border-bottom: 1px solid darken($grey-color-light, 10%);
+        font-size: 1.2em;
+
+        ul a {
+            padding-left: 2rem;
+        }
+
+        &:hover,
+        &:focus {
+            outline: none;
+
+            .expandable {
+                background: $dt-purple;
+                color: $dt-gray-dark;
+            }
+        }
+    }
+
+    .expandable,
+    a {
+        cursor: pointer;
+        display: block;
+        padding: .75em;
+        text-decoration: none;
+
+        &:hover,
+        &:focus {
+            background: $dt-purple;
+            color: $dt-gray-dark;
+        }
+
+        svg {
+            fill: $dt-gray-dark;
+            height: 24px;
+            position: absolute;
+            right: 2rem;
+            width: 24px;
+        }
+    }
+
+    .show-menu {
+        span {
+            color: $text-color;
+        }
+
+        svg {
+            transform: rotate(180deg);
+        }
+    }
+
+    .nav-section-title.show-menu > a {
+        color: #fff;
+        background: $nav-color;
+    }
+
+    .nav-item:not(.show-menu) > ul {
+        display: none;
+    }
+}
+
+.site-title {
+    align-self: flex-end;
+    border-radius: 5px;
+    color: $dt-purple;
+    @include relative-font-size(2.3);
+    font-weight: 400;
+    padding: .5rem .75rem;
+
+    &:hover,
+    &:focus {
+        background: $dt-purple;
+        color: $dt-gray-dark;
     }
 
 }
@@ -156,17 +227,19 @@ nav {
 
         li {
             flex: 1 1 auto;
-            margin-right: 1rem;
+            margin-right: 1.5rem;
 
             a {
-                background: #f1f1f1;
+                background: $background-color;
+                color: $dt-gray-dark;
                 border-radius: 5px;
                 padding: 1em 2em;
+                white-space: nowrap;
 
                 &:hover,
                 &:focus {
-                    background: $brand-color;
-                    color: #fff;
+                    background: $dt-purple;
+                    color: $dt-gray-dark;
                 }
             }
         }
@@ -180,61 +253,6 @@ nav {
         display: none;
     }
 
-    @include media-query($on-palm) {
-
-        position: absolute;
-        top: 9px;
-        right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        label[for="nav-trigger"] {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 36px;
-            z-index: 2;
-            cursor: pointer;
-        }
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg path {
-                fill: $grey-color-dark;
-            }
-
-        }
-
-        input ~ .trigger {
-            clear: both;
-            display: none;
-        }
-
-        input:checked ~ .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-            margin-left: 20px;
-
-            &:not(:last-child) {
-                margin-right: 0;
-            }
-
-        }
-    }
 }
 
 /**
@@ -258,9 +276,6 @@ nav {
 /**
  * Page content
  */
-.page-content {
-    padding: $spacing-unit 0;
-}
 
 .page-heading {
     @include relative-font-size(2);
