Create basic input and JS resize functionality

--- a/_includes/pattern-styles.html
+++ b/_includes/pattern-styles.html
@@ -4,6 +4,11 @@
         contain: content;
         display: block;
         font: 14px/22px "Open Sans", "Lucida Grande", "Lucida Sans", Geneva, Verdana, sans-serif;
+        transition-delay: .1s;
+        transition-duration: .3s;
+        transition-property: width;
+        transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+        width: 100%;
     }
     .pattern-inner {
         margin: 1rem;
