--- a/_includes/pattern-styles.html
+++ b/_includes/pattern-styles.html
@@ -1,6 +1,7 @@
 <style type="text/css">
     :host {
-        border: 1px solid lightblue;
+        border-top: 1px dotted #bd93f9;
+        border-bottom: 1px dotted #bd93f9;
         contain: content;
         display: block;
         font: 14px/22px "Open Sans", "Lucida Grande", "Lucida Sans", Geneva, Verdana, sans-serif;
@@ -9,9 +10,6 @@
         transition-property: width;
         transition-timing-function: cubic-bezier(.4, 0, .2, 1);
         width: 100%;
-    }
-    .pattern-inner {
-        margin: 1rem;
     }
     .ui--tiles {
         align-items: flex-start;
