Add standard and secondary button styles

--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -113,12 +113,49 @@ blockquote {
 /**
  * Buttons
  */
-button {
+%button {
     background: transparent center center no-repeat;
     border: 0;
     cursor: pointer;
     display: block;
     overflow: hidden;
+
+    &:hover,
+    &:focus {
+        background: lighten($grey-color-light, 5%);
+    }
+
+}
+
+button,
+.button {
+    @extend %button;
+
+    main & {
+        background: $dt-gray-dark;
+        border-radius: 4px;
+        box-shadow: 1px 1px 3px 1px rgba(20, 20, 20, 0.3);
+        color: $dt-gray-light;
+        font-size: 1rem;
+        margin: .5em;
+        padding: .75em 1em;
+
+        &:hover,
+        &:focus {
+            background: $dt-purple;
+            box-shadow: 1px 1px 5px 2px rgba(20, 20, 20, 0.3);
+            color: $text-color;
+        }
+    }
+}
+
+.button-secondary {
+
+    main & {
+        background: #fff;
+        border: 1px solid $dt-gray-dark;
+        color: $text-color;
+    }
 }
 
 /**
