--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
         {%- for item in site.patterns -%}
             {%- if item.id == page.id -%}
-                {%- include pattern-nav.html -%}
+                {%- include nav-pattern-library.html -%}
             {%- endif -%}
         {%- endfor -%}
 
