--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="{{ "/assets/js/patterns.js" | relative_url }}"></script>
+<script type="text/javascript" src="{{ "/assets/js/script.js" | relative_url }}"></script>
