Add meta section to page layout template

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,23 @@ layout: default
         <h1 class="post-title">{{ page.title | escape }}</h1>
     </header>
 
+    {%- if page.author or page.updated -%}
+    <div class="post-meta">
+        {%- if page.authors -%}
+            {%- for author in page.authors -%}
+                <p>Contributors:</p>
+                <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ author.name }}</span></span>
+            {%- endfor -%}
+        {%- endif -%}
+        {%- if page.updated -%}
+            <time class="dt-published" datetime="{{ page.updated | date_to_xmlschema }}" itemprop="dateModified">
+                {%- assign date_format = site.date_format | default: "%B %-d, %Y" -%}
+                {{ page.updated | date: date_format }}
+            </time>
+        {%- endif -%}
+    </div>
+    {%- endif -%}
+
     <section class="post-content">
         {{ content }}
     </section>
