--- a/_includes/pattern-styles.html
+++ b/_includes/pattern-styles.html
@@ -3,8 +3,12 @@
         border: 1px solid lightblue;
         contain: content;
         display: block;
-        font: 14px/22px "Open Sans", "Lucida Grande", "Lucida Sans", Geneva, Verdana, sans-serif;
+        font: 16px "Open Sans", "Lucida Grande", "Lucida Sans", Geneva, Verdana, sans-serif;
+		line-height: 1.5;
     }
+	button {
+		font-family: "Open Sans", "Lucida Grande", "Lucida Sans", Geneva, Verdana, sans-serif;
+	}
     .pattern-inner {
         margin: 1rem;
     }
