--- a/_patterns/components/notifications.html
+++ b/_patterns/components/notifications.html
@@ -1,6 +1,23 @@
 ---
 category: 3. Components
-order: 2
+order: 7
 title: Notifications
 description: The site notifications.
+show_source: true
 ---
+
+<div class="notification">
+	<p>This is a neutral notification.</p>
+</div>
+
+<aside class="positive-notification">
+	<p>A notification about something positive.</p>
+</aside>
+
+<div class="caution-notification">
+	<p>A notification denoting caution.</p>
+</div>
+
+<div class="warning-notification">
+	<p>A warning or error notification.</p>
+</div>
