--- a/_patterns/layouts/grids.html
+++ b/_patterns/layouts/grids.html
@@ -3,4 +3,50 @@ category: 4. Layouts
 order: 1
 title: Grids
 description: The site grid layouts.
+show_source: true
 ---
+
+<style>
+.hrs-gallery {
+	width: 32%;
+}
+.hrs-gallery .gallery-item {
+	border: 1px solid #981d4f;
+	margin: .5rem;
+	line-height: 1;
+	font-family: monospace;
+}
+.hrs-gallery .gallery-item:hover {
+	background: #981d4f;
+	color: #fff;
+}
+</style>
+
+<div class="hrs-gallery">
+	<a class="gallery-item" href="#">A</a>
+	<a class="gallery-item" href="#">B</a>
+	<a class="gallery-item" href="#">C</a>
+	<a class="gallery-item" href="#">D</a>
+	<a class="gallery-item" href="#">E</a>
+	<a class="gallery-item" href="#">F</a>
+	<a class="gallery-item" href="#">G</a>
+	<a class="gallery-item" href="#">H</a>
+	<a class="gallery-item" href="#">I</a>
+	<a class="gallery-item" href="#">J</a>
+	<a class="gallery-item" href="#">K</a>
+	<a class="gallery-item" href="#">L</a>
+	<a class="gallery-item" href="#">M</a>
+	<a class="gallery-item" href="#">N</a>
+	<a class="gallery-item" href="#">O</a>
+	<a class="gallery-item" href="#">P</a>
+	<a class="gallery-item" href="#">Q</a>
+	<a class="gallery-item" href="#">R</a>
+	<a class="gallery-item" href="#">S</a>
+	<a class="gallery-item" href="#">T</a>
+	<a class="gallery-item" href="#">U</a>
+	<a class="gallery-item" href="#">V</a>
+	<a class="gallery-item" href="#">W</a>
+	<a class="gallery-item" href="#">X</a>
+	<a class="gallery-item" href="#">Y</a>
+	<a class="gallery-item" href="#">Z</a>
+</div>
